--- a/styles.css
+++ b/styles.css
@@ -211,4 +211,8 @@ footer p {
         font-size: 1.2rem;
         font-weight: 600;
     }
+
+    footer {
+        justify-content: center;
+    }
 }
