--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,24 @@ footer p {
     color: var(--main-white);
 }
 
+.waviy {
+    position: relative;
+  }
+  .waviy span {
+    position: relative;
+    display: inline-block;
+    font-size: 7rem;
+    color: #fff;
+    text-transform: uppercase;
+    animation: flip 2s infinite;
+    animation-delay: calc(.2s * var(--i))
+  }
+  @keyframes flip {
+    0%,80% {
+      transform: rotateY(360deg) 
+    }
+  }
+
 @media only screen and (max-width: 680px) {
     .welcome-section h1 {
         font-size: 2.3rem;
@@ -214,5 +232,10 @@ footer p {
 
     footer {
         justify-content: center;
+    }
+}
+
+    .waviy span {
+        font-size: 3.5rem;
     }
 }
