--- a/styles.css
+++ b/styles.css
@@ -1,244 +1,242 @@
 :root {
-    --main-white: #f0f0f0;
-    --main-red: #be3144;
-    --main-blue: #45567d;
-    --main-gray: #303841;
-  }
+  --main-white: #f0f0f0;
+  --main-red: #be3144;
+  --main-blue: #45567d;
+  --main-gray: #303841;
+}
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.8rem;
-    font-weight: 400;
-    line-height: 1.4;
-    color: var(--main-white);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.4;
+  color: var(--main-white);
 }
 
 .nav {
-    display: flex;
-    justify-content: flex-end;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: var(--main-red);
-    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
-    z-index: 10;
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--main-red);
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+  z-index: 10;
 }
 
 .nav-list {
-    display: flex;
-    margin-right: 2rem;
+  display: flex;
+  margin-right: 2rem;
 }
 
 ul {
-    list-style: none;
-    text-decoration: none;
+  list-style: none;
+  text-decoration: none;
 }
 
 .nav-list a {
-    display: block;
-    font-size: 1.8rem;
-    padding: 2rem;
-    color: var(--main-white);
-    list-style: none;
-    text-decoration: none;
-    transition: font-size 0.4s ease-in-out;
+  display: block;
+  font-size: 1.8rem;
+  padding: 2rem;
+  color: var(--main-white);
+  list-style: none;
+  text-decoration: none;
+  transition: font-size 0.4s ease-in-out;
 }
 
 .nav-list a:hover {
-    background-color: yellow;
-    color: red;
-    font-size: 2.2rem;
-    font-weight: 600;
+  box-shadow: inset 0 0 10px 10px #45567d;
 }
 
 .welcome-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-color: #000;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
 }
 
 .welcome-section h1 {
-    font-size: 5rem;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    text-align: center;
-    color: var(--main-white);
+  font-size: 5rem;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  color: var(--main-white);
 }
 
 .welcome-section p {
-    font-style: italic;
-    color: var(--main-white);
-    font-size: 1.5rem;
+  font-style: italic;
+  color: var(--main-white);
+  font-size: 1.5rem;
 }
 
 .projects-section {
-    text-align: center;
-    padding: 10rem 2rem;
-    background: var(--main-blue);
+  text-align: center;
+  padding: 10rem 2rem;
+  background: var(--main-blue);
 }
 
 .projects-section-header {
-    max-width: 640px;
-    margin: 0 auto 6rem auto;
-    border-bottom: 0 solid var(--main-white);
-    color: var(--main-white);
+  max-width: 640px;
+  margin: 0 auto 6rem auto;
+  border-bottom: 0 solid var(--main-white);
+  color: var(--main-white);
 }
 
 .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 4rem;
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-    margin-bottom: 6rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  margin-bottom: 6rem;
 }
 
 .project {
-    background: var(--main-gray);
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    border-radius: 2px;
+  background: var(--main-gray);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 2px;
 }
 
 .projects-grid a {
-    text-decoration: none;
-    color: var(--main-white);
+  text-decoration: none;
+  color: var(--main-white);
 }
 
 .project-image {
-    height: 90%;
-    width: 100%;
-    object-fit: cover;
+  height: 90%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .project-tile {
-    font-size: 20px;
-    padding: 10px;
+  font-size: 20px;
+  padding: 10px;
 }
 
 .btn-show-all {
-    font-size: 2rem;
-    background: var(--main-gray);
-    transition: background 0.3s ease-out;
-    display: inline-block;
-    padding: 1rem 2rem;
-    border-radius: 20px;
-    color: var(--main-white);
-    text-decoration: none;
+  font-size: 2rem;
+  background: var(--main-gray);
+  transition: background 0.3s ease-out;
+  display: inline-block;
+  padding: 1rem 2rem;
+  border-radius: 20px;
+  color: var(--main-white);
+  text-decoration: none;
 }
 
 .btn-show-all:hover {
-    background-color: var(--main-red);
+  background-color: var(--main-red);
 }
 
 .contact-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 80vh;
-    padding: 0 2rem;
-    background: var(--main-gray);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80vh;
+  padding: 0 2rem;
+  background: var(--main-gray);
 }
 
 .contact-section-header h2 {
-    color: var(--main-white);
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 2.4rem;
+  color: var(--main-white);
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 2.4rem;
 }
 
 .contact-section-header p {
-    color: var(--main-white);
-    font-size: 1.3rem;
+  color: var(--main-white);
+  font-size: 1.3rem;
 }
 
 footer {
-    font-weight: 300;
-    display: flex;
-    justify-content: flex-end;
-    padding: 2rem;
-    background: var(--main-gray);
-    border-top: 4px solid var(--main-red);
+  font-weight: 300;
+  display: flex;
+  justify-content: flex-end;
+  padding: 2rem;
+  background: var(--main-gray);
+  border-top: 4px solid var(--main-red);
 }
 
 footer p {
-    margin: 2rem;
-    color: var(--main-white);
+  margin: 2rem;
+  color: var(--main-white);
 }
 
 .waviy {
-    position: relative;
+  position: relative;
+}
+.waviy span {
+  position: relative;
+  display: inline-block;
+  font-size: 8rem;
+  color: #fff;
+  text-transform: uppercase;
+  animation: flip 2s infinite;
+  animation-delay: calc(0.2s * var(--i));
+  z-index: 3;
+}
+@keyframes flip {
+  0%,
+  80% {
+    transform: rotateY(360deg);
   }
-  .waviy span {
-    position: relative;
-    display: inline-block;
-    font-size: 8rem;
-    color: #fff;
-    text-transform: uppercase;
-    animation: flip 2s infinite;
-    animation-delay: calc(.2s * var(--i));
-    z-index: 3;
-  }
-  @keyframes flip {
-    0%,80% {
-      transform: rotateY(360deg) 
-    }
-  }
+}
 
 @media only screen and (max-width: 680px) {
-    .welcome-section h1 {
-        font-size: 2.3rem;
-    }
+  .welcome-section h1 {
+    font-size: 2.3rem;
+  }
 
-    .welcome-section p {
-        font-size: 1rem;
-    }
+  .welcome-section p {
+    font-size: 1rem;
+  }
 
-    .nav-list a {
-        display: inline-block;
-        font-size: 1rem;
-    }
+  .nav-list a {
+    display: inline-block;
+    font-size: 1rem;
+  }
 
-    .nav {
-        display: flex;
-        padding: 3px;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-    
-    .nav-list a:hover {
-        background-color: yellow;
-        color: red;
-        font-size: 1.2rem;
-        font-weight: 600;
-    }
+  .nav {
+    display: flex;
+    padding: 3px;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
-    footer {
-        justify-content: center;
-    }
+  .nav-list a:hover {
+    background-color: yellow;
+    color: red;
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
 
-    .waviy span {
-        font-size: 3.5rem;
-    }
-    .project-tile {
+  footer {
+    justify-content: center;
+  }
+
+  .waviy span {
+    font-size: 3.5rem;
+  }
+  .project-tile {
     padding: 0px;
-}
+  }
 }
