--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@
   box-sizing: inherit;
 }
 
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
+
 html {
   box-sizing: border-box;
 }
