--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  font-family: "Inter", serif;
 }
 
 *:focus {
@@ -30,7 +31,7 @@ body {
 
 .nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -57,11 +58,14 @@ ul {
   color: var(--main-white);
   list-style: none;
   text-decoration: none;
-  transition: font-size 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
 }
 
 .nav-list a:hover {
-  box-shadow: inset 0 0 10px 10px #45567d;
+  /* box-shadow: inset 0 0 10px 10px #45567d; */
+  cursor: pointer;
+  transform: scale(1.1);
+  color: yellow;
 }
 
 .welcome-section {
@@ -121,6 +125,13 @@ ul {
 .projects-grid a {
   text-decoration: none;
   color: var(--main-white);
+  perspective: 1000px;
+  transition: transform 0.3s ease; /* Smooth transition for scaling */
+}
+
+.projects-grid a:hover {
+  cursor: pointer;
+  transform: scale(1.1); /* Scale up the card by 10% on hover */
 }
 
 .project-image {
@@ -172,18 +183,23 @@ ul {
   font-size: 1.3rem;
 }
 
+.contact-links a button {
+  color: #fff;
+}
+
 footer {
   font-weight: 300;
   display: flex;
   justify-content: flex-end;
-  padding: 2rem;
+  padding: 1rem;
   background: var(--main-gray);
   border-top: 4px solid var(--main-red);
 }
 
 footer p {
-  margin: 2rem;
+  margin: 0.6rem;
   color: var(--main-white);
+  font-weight: 600;
 }
 
 .waviy {
@@ -216,8 +232,10 @@ footer p {
   }
 
   .nav-list a {
-    display: inline-block;
-    font-size: 1rem;
+    display: flex;
+    font-size: 1.2rem;
+    padding: 1rem;
+    margin-top: 0.2rem;
   }
 
   .nav {
@@ -227,12 +245,12 @@ footer p {
     align-items: center;
   }
 
-  .nav-list a:hover {
+  /* .nav-list a:hover {
     background-color: yellow;
     color: red;
     font-size: 1.2rem;
     font-weight: 600;
-  }
+  } */
 
   footer {
     justify-content: center;
